--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,17 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Separate the data and labels\n",
+    "# Separating the data and labels\n",
     "texts, labels = zip(*documents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,14 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 82.20%\n"
+      "Accuracy: 85.60%\n"
      ]
     }
    ],
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -160,12 +160,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         neg       0.82      0.83      0.82       252\n",
-      "         pos       0.82      0.82      0.82       248\n",
+      "         neg       0.87      0.84      0.86       254\n",
+      "         pos       0.84      0.87      0.86       246\n",
       "\n",
-      "    accuracy                           0.82       500\n",
-      "   macro avg       0.82      0.82      0.82       500\n",
-      "weighted avg       0.82      0.82      0.82       500\n",
+      "    accuracy                           0.86       500\n",
+      "   macro avg       0.86      0.86      0.86       500\n",
+      "weighted avg       0.86      0.86      0.86       500\n",
       "\n"
      ]
     }
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sentiment: pos\n"
+      "Sentiment: neg\n"
      ]
     }
    ],
@@ -195,29 +195,15 @@
     "    sentiment = model.predict(text_features)\n",
     "    return sentiment[0]\n",
     "\n",
-    "# Test the function\n",
-    "sample_text = \"This movie was an absolute masterpiece with brilliant acting and storyline.\"\n",
+    "# Test the function with made up sample text\n",
+    "sample_text = \"This movie was kind of okay but also not a big fan of it.\"\n",
     "print(f\"Sentiment: {predict_sentiment(sample_text)}\")"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
